--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["stylelint-config-standard", "stylelint-config-prettier"],
+  "extends": ["stylelint-config-standard", "stylelint-config-standard-scss", "stylelint-config-prettier", "stylelint-config-prettier-scss"],
   "rules": {
     "selector-class-pattern": null
   }
