--- a/package.json
+++ b/package.json
@@ -2,18 +2,32 @@
   "name": "complex-animation-with",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
+  "private": "true",
   "dependencies": {},
   "devDependencies": {
+    "copy-webpack-plugin": "^10.2.4",
+    "css-loader": "^6.7.1",
+    "dart-sass": "^1.25.0",
+    "sass": "^1.50.0",
+    "sass-loader": "^12.6.0",
     "standard": "^16.0.4",
+    "style-loader": "^3.3.1",
     "stylelint": "^14.6.1",
     "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^25.0.0"
+    "stylelint-config-prettier-scss": "0.0.1",
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   },
   "scripts": {
-    "lint:js": "standard --fix",
-    "lint:style": "stylelint \"./src/**/*.css\" --fix",
-    "lint": "npm run lint:style && npm run lint:js"
+    "build": "webpack --mode=production",
+    "lint:js": "standard ./src --fix",
+    "lint:style": "stylelint \"./src/**/*.(s)*css\" --fix",
+    "lint": "npm run lint:style && npm run lint:js",
+    "start": "webpack serve --open  --mode=development",
+    "watch": "webpack --watch  --mode=development"
   },
   "author": "",
   "license": "ISC"
