--- a/package.json
+++ b/package.json
@@ -3,11 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "private": "true",
-  "dependencies": {},
+  "dependencies": {
+    "@ashthornton/asscroll": "^2.0.6",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.4",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
     "dart-sass": "^1.25.0",
+    "html-webpack-plugin": "^5.5.0",
     "sass": "^1.50.0",
     "sass-loader": "^12.6.0",
     "standard": "^16.0.4",
@@ -23,11 +32,10 @@
   },
   "scripts": {
     "build": "webpack --mode=production",
-    "lint:js": "standard ./src --fix",
+    "lint:js": "standard --fix",
     "lint:style": "stylelint \"./src/**/*.(s)*css\" --fix",
     "lint": "npm run lint:style && npm run lint:js",
-    "start": "webpack serve --open  --mode=development",
-    "watch": "webpack --watch  --mode=development"
+    "start": "webpack serve --mode=development"
   },
   "author": "",
   "license": "ISC"
